--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -2,9 +2,11 @@ name: Generate API Coverage
 
 on:
   workflow_dispatch:
+  push:
+    branches: ["coverage-test"]
 
 jobs:
-  generate-coverage-report:
+  generate-cpp-overage-report:
     runs-on: macos-15
     steps:
       - name: Checkout repository
@@ -43,6 +45,47 @@ jobs:
                   aws s3 sync $coverage_dir s3://${AWS_S3_CODE_BUCKET}/ice/cpp/main/coverage/$(basename $coverage_dir) --delete
               fi
           done
+
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_S3_CODE_BUCKET: ${{ secrets.AWS_S3_CODE_BUCKET }}
+          AWS_DEFAULT_REGION: us-east-1
+        if: github.ref == 'refs/heads/main'
+
+  generate-csharp-coverage-report:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup Dependencies
+        uses: ./.github/actions/setup-dependencies
+        with:
+          use_ccache: false
+
+      - name: Build C#
+        working-directory: ./csharp
+        run: make
+
+      - name: Generate C# Coverage
+        working-directory: ./csharp
+        run: |
+          dotnet-coverage collect --server-mode --background --session-id ice-coverage --output output.cobertura.xml --output-format cobertura
+          python3 allTests.py --all --dotnet-command "dotnet-coverage connect ice-coverage dotnet"
+          dotnet-coverage shutdown ice-coverage
+
+      - name: Generate Coverage Reports
+        uses: danielpalme/ReportGenerator-GitHub-Action@5.3.8
+        with:
+          reports: csharp/coverage.cobertura.xml
+          targetdir: coveragereport
+          reporttypes: Html;Badges
+          license: ${{ secrets.REPORT_GENERATOR_LICENSE }}
+
+      - name: Sync Documentation to S3
+        working-directory: ./csharp/coveragereport
+        run: aws s3 sync . s3://${AWS_S3_CODE_BUCKET}/ice/csharp/main/coverage --delete
 
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
