--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -88,10 +88,9 @@ jobs:
       - name: Sync Documentation to S3
         working-directory: ./coveragereport
         run: aws s3 sync . s3://${AWS_S3_CODE_BUCKET}/ice/csharp/main/coverage --delete
-
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_S3_CODE_BUCKET: ${{ secrets.AWS_S3_CODE_BUCKET }}
           AWS_DEFAULT_REGION: us-east-1
-        # if: github.ref == 'refs/heads/main'
+        if: github.ref == 'refs/heads/main'
