--- a/.github/actions/setup-dependencies/action.yml
+++ b/.github/actions/setup-dependencies/action.yml
@@ -119,8 +119,10 @@ runs:
       shell: bash
       run: |
         wget https://dl.google.com/android/repository/commandlinetools-linux-11076708_latest.zip -O /tmp/android-sdk.zip
-        unzip -q /tmp/android-sdk.zip -d /opt/android-sdk
-        export ANDROID_SDK_ROOT=/opt/android-sdk
+        unzip -q /tmp/android-sdk.zip -d /opt/android-sdk/cmdline-tools
+        rm /tmp/android-sdk.zip
+        mv /opt/android-sdk/cmdline-tools/cmdline-tools /opt/android-sdk/cmdline-tools/latest
+        export ANDROID_SDK_ROOT=/opt/android-sdk/cmdline-tools/latest
         echo "ANDROID_SDK_ROOT=$ANDROID_SDK_ROOT" >> $GITHUB_ENV
         echo "$ANDROID_SDK_ROOT/cmdline-tools/bin" >> $GITHUB_PATH
       if: matrix.config == 'android'
