--- a/.github/workflows/build-deb-packages.yml
+++ b/.github/workflows/build-deb-packages.yml
@@ -5,37 +5,59 @@ on:
     inputs:
       ice_version:
         description: "The Ice version to build"
-        required: true
-        default: "3.8.0~alpha0"
+        required: false
       deb_build_options:
         description: "DEB_BUILD_OPTIONS for the build"
         required: false
         default: "nocheck parallel=4"
+      repository_url:
+        description: "The URL of the Nexus repository to publish to"
+        required: false
+        type: string
+      repository_suffix:
+        description: "The suffix to append to the repository URL"
+        required: false
+        type: string
+  workflow_call:
+    inputs:
+      ice_version:
+        required: false
+        type: string
+      deb_build_options:
+        type: string
+        required: false
+      repository_url:
+        required: false
+        type: string
+      repository_suffix:
+        required: false
+        type: string
+    secrets:
+      REPOSITORY_USERNAME:
+        required: false
+      REPOSITORY_PASSWORD:
+        required: false
 
 jobs:
   build:
-    name: "Build for ${{ matrix.os }}"
-    runs-on: ${{ matrix.runner }}
+    name: "Build for ${{ matrix.distribution }}-${{ matrix.arch }}"
+    runs-on: ${{ matrix.arch == 'aarch64' && 'ubuntu-24.04-arm' || 'ubuntu-24.04' }}
     strategy:
       matrix:
         include:
-          - os: ubuntu-24.04
-            runner: ubuntu-24.04
-            dockerfile_path: ice/packaging/dpkg/docker/ubuntu-24.04/Dockerfile
+          - distribution: ubuntu-24.04
+            arch: x86_64
 
-          - os: ubuntu-24.04-arm64
-            runner: ubuntu-24.04-arm
-            dockerfile_path: ice/packaging/dpkg/docker/ubuntu-24.04/Dockerfile
+          - distribution: ubuntu-24.04
+            arch: aarch64
 
-          - os: debian-12
-            runner: ubuntu-24.04
-            dockerfile_path: ice/packaging/dpkg/docker/debian-12/Dockerfile
-            build_profiles: "no-python312"
+          - distribution: debian-12
+            arch: x86_64
+            deb_build_profiles: "no-python312"
 
-          - os: debian12-arm64
-            runner: ubuntu-24.04-arm
-            dockerfile_path: ice/packaging/dpkg/docker/debian-12/Dockerfile
-            build_profiles: "no-python312"
+          - os: debian12
+            arch: aarch64
+            deb_build_profiles: "no-python312"
 
     steps:
       - name: Check out repository
@@ -46,7 +68,13 @@ jobs:
       - name: Call Build Debian Package Action
         uses: ./ice/.github/actions/build-deb-package
         with:
-          ice_version: ${{ inputs.ice_version }}
-          deb_build_options: ${{ inputs.deb_build_options }}
-          os: ${{ matrix.os }}
-          dockerfile_path: ${{ matrix.dockerfile_path }}
+          ice_version: ${{ inputs.ice_version || ''}}
+          deb_build_options: ${{ inputs.deb_build_options || '' }}
+          deb_build_profiles: ${{ matrix.deb_build_profiles || '' }}
+          distribution: ${{ matrix.distribution }}
+          arch: ${{ matrix.arch }}
+          repository_url: ${{ inputs.repository_url || ''}}
+          repository_suffix: ${{ inputs.repository_suffix || '' }}
+        env:
+          REPOSITORY_USERNAME: ${{ secrets.REPOSITORY_USERNAME }}
+          REPOSITORY_PASSWORD: ${{ secrets.REPOSITORY_PASSWORD }}
