--- a/.github/workflows/build-matlab-packages.yml
+++ b/.github/workflows/build-matlab-packages.yml
@@ -1,12 +1,11 @@
 name: "Build MATLAB Packages"
 
 on:
-  workflow_call: # Allows calling from other workflows
-  workflow_dispatch: # Allows manual triggering
+  workflow_call:
+  workflow_dispatch:
 
 jobs:
-  build-python-packages:
-
+  build-matlab-packages:
     strategy:
       matrix:
         include:
@@ -24,13 +23,13 @@ jobs:
         with:
           use_matlab: true
 
-      - name: Build MATLAB ToolBox
+      - name: Build Linux MATLAB ToolBox
         run: |
           make -C cpp srcs
           make -C matlab toolbox
         if: runner.os == 'Linux'
 
-      - name: Build MATLAB ToolBox
+      - name: Build Windows MATLAB ToolBox
         run: MSBuild /p:Configuration=Release /p:Platform=x64 /t:Package matlab\msbuild\ice.proj
         if: runner.os == 'Windows'
 
