--- a/.github/actions/build-rpm-package/action.yml
+++ b/.github/actions/build-rpm-package/action.yml
@@ -4,35 +4,43 @@ inputs:
   ice_version:
     description: "The Ice version to build"
     required: true
-  os:
-    description: "The target OS (e.g., rhel9, rhel9-arm64, rhel9-x86)"
+  distribution:
+    description: "The target distribution: (e.g., rhel9)"
     required: true
-  target_arch:
-    description: "The target build architecture uses as a parameter for rpmbuild --target"
-    required: true
-  dockerfile_path:
-    description: "Path to the Dockerfile"
+  arch:
+    description: "The target build architecture used as a parameter for rpmbuild --target"
     required: true
 
 runs:
   using: "composite"
   steps:
     - name: Build Docker Image
-      run: docker build --pull -f ${{ inputs.dockerfile_path }} -t ice-rpm-package-builder "$GITHUB_WORKSPACE/ice"
+      run: docker build --pull -f ice/packaging/rpm/docker/${{ inputs.distribution }}/Dockerfile -t ice-rpm-package-builder "$GITHUB_WORKSPACE/ice"
       shell: bash
 
-    - name: Run Package Build with Mounted Source
+    - name: Build RPM Packages
       run: |
         docker run --rm \
           -v "$GITHUB_WORKSPACE:/workspace" \
           -e ICE_VERSION="${{ inputs.ice_version }}" \
-          -e TARGET_ARCH="${{ inputs.target_arch }}" \
+          -e TARGET_ARCH="${{ inputs.arch }}" \
           ice-rpm-package-builder /workspace/ice/packaging/rpm/build-package.sh
       shell: bash
 
     - name: Upload Artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: rpm-packages-${{ inputs.os }}
+        name: rpm-packages-${{ inputs.distribution }}-${{ inputs.arch }}
         path: |
           *.rpm
+
+    - name: Publish RPM Packages
+      run: |
+        docker run --rm \
+          -v "$GITHUB_WORKSPACE:/workspace" \
+          -e REPOSITORY_URL="${{ inputs.repository_url }}/${{ inputs.distribution }}${{ inputs.repository_suffix }}/" \
+          -e REPOSITORY_USERNAME="$REPOSITORY_USERNAME" \
+          -e REPOSITORY_PASSWORD="$REPOSITORY_PASSWORD" \
+          ice-rpm-package-builder /workspace/ice/packaging/rpm/publish-packages.sh
+      shell: bash
+      if: inputs.repository_url != ''
