--- a/.github/workflows/build-pip-packages.yml
+++ b/.github/workflows/build-pip-packages.yml
@@ -1,12 +1,31 @@
 name: "Build PIP Packages"
 
 on:
-  workflow_call: # Allows calling from other workflows
-  workflow_dispatch: # Allows manual triggering
+  workflow_call:
+    inputs:
+      ice_version:
+        required: false
+        type: string
+      repository_url:
+        required: false
+        type: string
+    secrets:
+      PYPI_USERNAME:
+        required: false
+      PYPI_PASSWORD:
+        required: false
+  workflow_dispatch:
+    inputs:
+      ice_version:
+        description: "The Ice version to build"
+        required: false
+      repository_url:
+        description: "The URL of the PYPI registry to publish to"
+        required: false
+        type: string
 
 jobs:
   build-python-packages:
-
     strategy:
       matrix:
         include:
@@ -27,6 +46,11 @@ jobs:
           python3 -m pip install --upgrade pip
           python3 -m pip install build
 
+      - name: Update PYPI Version
+        working-directory: python
+        run: sed -i 's/version = .*/version = "${{ inputs.ice_version }}"/' pyproject.toml
+        if: inputs.ice_version != ''
+
       - name: Build PIP Package
         working-directory: python
         run: python3 -m build
@@ -38,3 +62,26 @@ jobs:
           path: |
             python/dist/zeroc_ice-*.whl
             python/dist/zeroc_ice-*.tar.gz
+
+  publish-python-packages:
+    runs-on: ubuntu-latest
+    needs: build-python-packages
+
+    steps:
+      - name: Download All Compiler Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: artifacts
+
+      - name: Publish PIP Package
+        run: mkdir -p ${{ github.workspace }}/dist
+          cp -r artifacts/pip-packages-windows-latest/*.whl ${{ github.workspace }}/dist
+          cp -r artifacts/pip-packages-macos-latest/*.whl ${{ github.workspace }}/dist
+          cp -r artifacts/pip-packages-macos-latest/*.tar.gz ${{ github.workspace }}/dist
+
+          python3 -m pip install twine --user
+          python3 -m twine upload --repository_url ${{ inputs.repository_url }} python/dist/*
+        env:
+          TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
+          TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+        if: inputs.repository_url != ''
