--- a/.github/workflows/build-xcframework-packages.yml
+++ b/.github/workflows/build-xcframework-packages.yml
@@ -1,8 +1,8 @@
 name: "Build XCFramework Packages"
 
 on:
-  workflow_call: # Allows calling from other workflows
-  workflow_dispatch: # Allows manual triggering
+  workflow_call:
+  workflow_dispatch:
 
 jobs:
   build-xcfranework-packages:
