--- a/java/gradle/maven-publish.publishing.gradle
+++ b/java/gradle/maven-publish.publishing.gradle
@@ -7,16 +7,16 @@ tasks.withType(GenerateMavenPom.class) {
     destination = file(project.ext.pomName)
 }
 
-ext.mavenRepo = rootProject.hasProperty('mavenRepo')?project.mavenRepo:System.getenv('MAVEN_REPO')?:''
-ext.mavenUser = rootProject.hasProperty('mavenUser')?project.mavenUser:System.getenv('MAVEN_USER')?:''
+ext.mavenRepository = rootProject.hasProperty('mavenRepository')?project.mavenRepo:System.getenv('MAVEN_REPOSITORY')?:''
+ext.mavenUsername = rootProject.hasProperty('mavenUsername')?project.mavenUser:System.getenv('MAVEN_USERNAME')?:''
 ext.mavenPassword = rootProject.hasProperty('mavenPassword')?project.mavenPassword:System.getenv('MAVEN_PASSWORD')?:''
 
 publishing {
     repositories {
         maven {
-            url = mavenRepo
+            url = mavenRepository
             credentials {
-                username mavenUser
+                username mavenUsername
                 password mavenPassword
             }
         }
