Upgrade module resolution

--- a/js/package.json
+++ b/js/package.json
@@ -18,7 +18,10 @@
     ],
     "type": "module",
     "exports": {
-        ".": "./src/index.js",
+        ".": {
+            "import": "./src/index.js",
+            "types": "./src/index.d.ts"
+        },
         "./slice2js": "./src/slice2js.js"
     },
     "bin": {
